# TaichiSLAM

./: .gitignore  AOT_README.md  AOT_USAGE.md  CLAUDE.md  README.md  aot_export.py  quick_benchmark.py  requirements.txt  run_benchmark.py  simple_mapping_test.py  simple_perf_test.py  test_cpp_runtime.cpp  test_mapping_performance.py  test_tsdf_integration.py  test_with_dataset.py
aot_runtime/: CMakeLists.txt  README.md
aot_runtime/examples/: CMakeLists.txt  arm_mali_example.cpp  basic_octo.cpp
aot_runtime/include/: taichislam_aot.h
aot_runtime/src/: taichislam_aot.cpp
docs/plans/: 2025-02-25-aot-implementation-design.md  2025-02-25-aot-implementation-plan.md
taichi_slam/mapping/: aot_octomap.py  aot_tsdf.py
taichi_slam/utils/: pointcloud_transfer.py
test_aot_cpp/: test_aot.cpp
